force-app/main/default/objects/QuoteLineItem/fields/Alcance__c.field-meta.xml
<CustomField>
    <fullName>Alcance__c</fullName>
    <label>Alcance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>