force-app/main/default/objects/QuoteLineItem/fields/Meses__c.field-meta.xml
<CustomField>
    <fullName>Meses__c</fullName>
    <label>Meses</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>