force-app/main/default/objects/QuoteLineItem/fields/Negocio__c.field-meta.xml
<CustomField>
    <fullName>Negocio__c</fullName>
    <label>Negócio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>