force-app/main/default/objects/QuoteLineItem/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <formula>TEXT(Product2.Tipo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo do Produto</label>
    <type>Text</type>
</CustomField>