force-app/main/default/objects/QuoteLineItem/fields/Regiao__c.field-meta.xml
<CustomField>
    <fullName>Regiao__c</fullName>
    <label>Região</label>
    <length>255</length>
    <type>Text</type>
</CustomField>