force-app/main/default/objects/QuoteLineItem/fields/Subsegmento__c.field-meta.xml
<CustomField>
    <fullName>Subsegmento__c</fullName>
    <label>Subsegmento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>